Implementando estrutura completa, app sem banco configurado

--- a/src/WizCo.Application/WizCo.Application.csproj
+++ b/src/WizCo.Application/WizCo.Application.csproj
@@ -12,4 +12,12 @@
     <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WizCo.Domain\WizCo.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Shared\Queries\" />
+  </ItemGroup>
+
 </Project>
