--- a/src/WizCo.Domain/WizCo.Domain.csproj
+++ b/src/WizCo.Domain/WizCo.Domain.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WizCo.Application\WizCo.Application.csproj" />
-    <ProjectReference Include="..\WizCo.Infrastructure\WizCo.Infrastructure.csproj" />
+    <PackageReference Include="AspNetCore.IQueryable.Extensions" Version="8.0.0" />
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
   </ItemGroup>
 
 </Project>
