--- a/src/WizCo.Infrastructure/WizCo.Infrastructure.csproj
+++ b/src/WizCo.Infrastructure/WizCo.Infrastructure.csproj
@@ -8,6 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.23">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.23" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WizCo.Domain\WizCo.Domain.csproj" />
+    <ProjectReference Include="..\WizCo.Application\WizCo.Application.csproj" />
   </ItemGroup>
 
 </Project>
